force-app/main/default/objects/Cashbook__c/Cashbook__c.object-meta.xml
<CustomObject>
    <label>Cashbook</label>
    <nameField>
        <displayFormat>CB-{0000}</displayFormat>
        <label>Cashbook Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cashbooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>