force-app/main/default/objects/Cashbook__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Cashbooks</relationshipLabel>
    <relationshipName>Cashbooks</relationshipName>
    <type>Lookup</type>
</CustomField>