force-app/main/default/objects/Cashbook__c/fields/Opening_Balance__c.field-meta.xml
<CustomField>
    <fullName>Opening_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Opening Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>