force-app/main/default/objects/Cashbook__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Route__c</columns>
    <columns>Branch__c</columns>
    <columns>Opening_Balance__c</columns>
    <columns>Closing_Balance__c</columns>
    <columns>Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opening_Balance__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Closing_Balance__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>