force-app/main/default/objects/Cashbook__c/listViews/TODAY.listView-meta.xml
<ListView>
    <fullName>TODAY</fullName>
    <columns>NAME</columns>
    <columns>Route__c</columns>
    <columns>Branch__c</columns>
    <columns>Opening_Balance__c</columns>
    <columns>Closing_Balance__c</columns>
    <columns>Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>TODAY</label>
</ListView>